lab1/Test/L1-A-11-76.cmm
int y_Jt5WseLwjR ( int mJa2__7QRUOGAW , struct rVQ0VA8fX9nS11J5me 
  cvIzN9dqf ) {
  int _J26 , olJkp4 ;
  float u1p4 [ 1733640167 ] = ;
{
    Yf96 ;
    if ( PSvARQ6w )     while ( e_fPlH12O3KYz )     return 
      FN_WDL && BvVcj7_MYs4T_ >= - - ITbWidQa3FcU47ixqR 
      ( MsLVdRSgjTmp45T , tokoma0jNYoO11dT = PnQre || mCDe5tO8gJpZ 
      < xykSsV0aQuUsmIqs - x75hGROd7Ad / ! - - o0N8Lchmcqcl 
      [ jx2r3z1C && Mm2vu_n_YG8Il <= SFm + - J ( R = svFo2B6sXxQ4aM2Zn8 
      || xhuqT_AehYx > ! c8NZmOq2M5PTu [ wlx3apP && Qep5eNwMpNN 
      * ( wKOF72YRMXG && VqbjSrPlFHy_2X9yRq != tCKWdz * 
      ! ! msZ5nKn_u [ F == ] ) / 968468415 ] ) * 1390505662.121913152 
      ] . GGEK1 * - WTTNU2QU9CpMk6H ) / ! VWyHVoBaU2xXG 
      ( ) ;


  }}
int bny 
;
int && ;
int r_gaRk8lgk ( ) {
}
int ;
struct eQIshVQPXUmy3c {
  struct {
    int bceIOm2eRQZiGcyaSr ;
  }OK ;
};
int ;
int ;
int GGb7ZnzEdMToPcqfMJe , QjuD7b 

;
int ;
int P3 ( / ) {
  SmjsAVs8Xfn0OaEhBzLk ;
  KCJOpJFF51 ;
  while ( SJ6 )   if ( NyU5VrJGH9s ) {
    Gyz4hLCvDAUN ;
    if ( HancSo5kVzBJ9N9 )     lo3KNljw9qWPmbzcTg 
      ;
else     if ( fOlUYKjE1t5bME )     Ejl6Z ;


    G7oZsjpKlIXnPN ;
  }else   if ( iAr )   while ( hiVJdudl1NJ0B6m )   SdsvPXA4uMq 
    return ;

else   if ( j )   j75O1 ;
else   while ( Pc )   gCJ1WqwDcLO_03_GK ;





  ooY_Ik_4 ;
  if ( JPSm1WhsDxBZc )   mQ0rCHq4_hpM ;
else   if ( B7gaRRrXT2I0KU )   rLiz5kbymaFTe4s ;
else   Eg1MjtwIhqTityUzwY ;


}
int mH ( ) {
}
[ 